<resources>
    <string name="app_name">SnapShop</string>
    <string name="created_by_priit_k_rd">Created by Priit Käärd</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus fringilla magna, nec vestibulum velit imperdiet fermentum. Vivamus faucibus risus elit, vestibulum posuere ex semper vel. Vivamus feugiat urna purus, aliquam pretium dolor placerat vitae. Nulla quam nibh, interdum eget magna sit amet, accumsan ultricies mauris. Aenean fringilla tempor augue vitae porttitor. Pellentesque nec dignissim nisi. Morbi nisi odio, placerat vitae dolor sit amet, fringilla volutpat magna. Integer nibh erat, vehicula ut egestas convallis, finibus ut justo. Nunc maximus justo tortor, a imperdiet ipsum faucibus ac.</string>
    <string name="logo_description">Main logo for SnapShop\'s splash screen.</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_with_the_terms_of_services">I agree with the terms of services</string>
    <string name="image_button">Image button</string>
    <string name="product_image">Product image</string>
    <string name="toode_1">Toode 1</string>
    <string name="settings">Settings</string>
    <string name="basket_is_empty">Your basket is empty!</string>
    <string name="checkout">Checkout</string>
    <string name="logged_in">Logged in</string>
    <string name="tag_checkout_thankyou">tag_checkout_thankyou_fragment</string>
    <string name="tag_settings_list_fragment">tag_settings_list_fragment</string>
    <string name="tag_product_list_fragment">tag_product_list_fragment</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="remove_from_basket">Remove from basket</string>
    <string name="tag_order_list_fragment">tag_orders_list_fragment</string>
    <string name="tag_settings_account_fragment">tag_settings_account_fragment</string>
    <string name="order_number">Order nr.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="publish">Publish</string>
    <string name="add_photo">Add Photo</string>
    <string name="describe_your_product">Describe your product:</string>
    <string name="location">Location</string>
    <string name="toote_pealkiri_ja_muu">Toote pealkiri ja muu</string>
    <string name="_1">1</string>
    <string name="total">Total:</string>
    <string name="x">X</string>
    <string name="your_items">Your items:</string>
    <string name="pay">Pay</string>
    <string name="order_total">Order total:</string>
    <string name="choose_payment_method">Choose payment method:</string>
    <string name="thank_you_for_shopping">Thank you for shopping</string>
    <string name="your_order_was_confirmed_and_is_waiting_to_be_shipped">Your order was confirmed and is waiting to be shipped</string>
    <string name="back_to_shopping">Back to shopping</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="my_orders">My Orders</string>
    <string name="you_do_not_have_any_orders_yet">You do not have any orders yet</string>
    <string name="no_products_to_show">No products to show</string>
    <string name="products">Products</string>
    <string name="euro">€</string>
    <string name="contact">Contact</string>
    <string name="home_city">Home City</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="account_owner">Account Owner</string>
    <string name="account_iban_number">Account IBAN Number</string>
    <string name="presonal_details">Presonal Details</string>
    <string name="first_name">First Name</string>
    <string name="payment_details">Payment details</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="trying_to_log_in">Trying to log in…</string>
    <string name="error_occurred_uploading_image">Error occurred uploading image.</string>
    <string name="could_not_upload_an_image">Could not upload an image:</string>
    <string name="save">SAVE</string>

    <!-- Fragment tags -->
    <string name="tag_splash_loading">tag_splash_loading</string>
    <string name="tag_main_recycle_fragment">tag_main_recycle_fragment</string>
    <string name="tag_home_product_fragment">tag_home_product_fragment</string>
    <string name="tag_checkout_confirm">tag_checkout_confirm</string>
    <string name="tag_checkout_maksekeskus">tag_checkout_maksekeskus_fragment</string>
    <string name="tag_splash_login">tag_splash_login</string>
    <string name="tag_splash_register">tag_splash_register</string>
    <string name="tag_splash_first">tag_splash_first</string>

    <string name="login_request_key">LOGIN_REQUEST</string>
    <string name="subtotal">Subtotal</string>
</resources>